Removed transform from about me section, causing mobile layout issue

--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -60,7 +60,6 @@
   }
 
   .about-me {
-    transform: translate(0, -10%);
     padding: 8rem 1.6rem;
   }
 }
